[package]
name = "rust_wasm_ball"
version = "0.1.0"
authors = ["keeleyhammond"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.36"
wasm-bindgen = "0.2.59"
gloo-timers = "0.2.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
